# ai_docs

./: .gitignore  PLAN.md  llm_cache.json  pyproject.toml
ai_docs/: call_llm.py  fetch_files.py  git_commit_size.py  llm_cache.json  main.py  settings.py
ai_docs/docs/: call_llm.md  fetch_files.md  llm_cache.md  main.md  settings.md
docs/: PLAN.md
docs/ai_docs/: call_llm.md  fetch_files.md  llm_cache.md  main.md  settings.md
